# simplestcrypt

./: Cargo.toml  README.md  release.toml
examples/: simple.rs
src/: lib.rs
