[package]
name = "simplestcrypt"
version = "0.1.1"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2018"
description = "Simplest way to perform a symmetric encryption, using a preshared key. Very small wrapper around aes-siv crate, with randomly generated nonces, for anything more advanced, use aes-siv instead"
license = "MIT"
repository = "https://github.com/TotalKrill/simplestcrypt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

aes-siv = "0.5"
rand = "0.7"
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3"
