[package]
name = "simplestcrypt"
version = "0.2.0"
authors = ["Kristoffer Ödmark <kristoffer.odmark90@gmail.com>"]
edition = "2021"
description = "Simplest way to perform a symmetric encryption, using a preshared key. Very small wrapper around aes-siv crate, with randomly generated nonces, for anything more advanced, use aes-siv instead"
license = "MIT"
repository = "https://github.com/TotalKrill/simplestcrypt"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

aes-siv = "0.7"
rand = "0.9"
serde = {version = "1.0", features = ["derive"]}
bincode = {version = "2.0", features = ["serde"] }
